[gd_scene load_steps=8 format=3 uid="uid://cco8nwb1sj5u7"]

[ext_resource type="Script" path="res://scenes/menu_scene/menu_scene.gd" id="1_mfupo"]
[ext_resource type="Texture2D" uid="uid://i66p38rq7vc8" path="res://assets/images/backdrop.png" id="2_m3o6g"]
[ext_resource type="FontFile" uid="uid://bwfc7ghlkd2x2" path="res://assets/fonts/custom_font.ttf" id="3_bhjfg"]
[ext_resource type="Texture2D" uid="uid://baemeieganiec" path="res://assets/images/main_menu_button.png" id="3_tlk8x"]
[ext_resource type="Texture2D" uid="uid://bih2grghxr50y" path="res://assets/images/main_menu_button_pressed.png" id="4_ppnda"]
[ext_resource type="FontVariation" uid="uid://cs4lytfyex3he" path="res://assets/fonts/ui_font_theme.tres" id="6_2v0it"]

[sub_resource type="FontVariation" id="FontVariation_ag6ai"]
base_font = ExtResource("3_bhjfg")
variation_embolden = 0.5

[node name="MenuScene" type="Node2D"]
script = ExtResource("1_mfupo")

[node name="Background" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="BackgroundColorRect" type="ColorRect" parent="Background"]
offset_right = 640.0
offset_bottom = 1440.0
color = Color(0.384314, 0.0392157, 0.576471, 1)
metadata/_edit_lock_ = true

[node name="MainMenuBackdrop" type="Sprite2D" parent="Background"]
position = Vector2(320, 720)
texture = ExtResource("2_m3o6g")
metadata/_edit_lock_ = true

[node name="DarkTintColorRect" type="ColorRect" parent="Background"]
offset_right = 640.0
offset_bottom = 1440.0
color = Color(0, 0, 0, 0.501961)
metadata/_edit_lock_ = true

[node name="GameNameLabel" type="Label" parent="."]
offset_top = 128.0
offset_right = 640.0
offset_bottom = 608.0
theme_override_fonts/font = SubResource("FontVariation_ag6ai")
theme_override_font_sizes/font_size = 192
text = "DUAL
RACER"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="CreatorLabel" type="Label" parent="."]
offset_top = 592.0
offset_right = 640.0
offset_bottom = 656.0
theme_override_fonts/font = ExtResource("6_2v0it")
theme_override_font_sizes/font_size = 48
text = "By CaptainAyan"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="StartButton" type="TouchScreenButton" parent="."]
position = Vector2(96, 800)
texture_normal = ExtResource("3_tlk8x")
texture_pressed = ExtResource("4_ppnda")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="StartButtonLabel" type="Label" parent="StartButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("6_2v0it")
theme_override_font_sizes/font_size = 96
text = "START"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="HighScoreButton" type="TouchScreenButton" parent="."]
position = Vector2(96, 992)
texture_normal = ExtResource("3_tlk8x")
texture_pressed = ExtResource("4_ppnda")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="HighScoreButtonLabel" type="Label" parent="HighScoreButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("6_2v0it")
theme_override_font_sizes/font_size = 96
text = "HIGHSCORE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="QuitButton" type="TouchScreenButton" parent="."]
position = Vector2(96, 1184)
texture_normal = ExtResource("3_tlk8x")
texture_pressed = ExtResource("4_ppnda")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="QuitButtonLabel" type="Label" parent="QuitButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("6_2v0it")
theme_override_font_sizes/font_size = 96
text = "QUIT"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[connection signal="released" from="StartButton" to="." method="_on_start_button_released"]
[connection signal="released" from="HighScoreButton" to="." method="_on_high_score_button_released"]
[connection signal="released" from="QuitButton" to="." method="_on_quit_button_released"]
